# getfair

./: .gitignore  Aguacate_project_filtered.json  README.md  bc_monitor.py  build_metadata.py  cardano_config.ini  create_project.py  dblib.py  getfair.code-workspace  getfair.session.sql  getfair1.session.sql  image_processing.py  ipfs.py  main.py  metadata.json  metadata.py  project_monitor.py  projects.json  psql_interact.py  pyproject.toml  requirements.txt  server.py  supervisord.conf  temp_metadata.py  text.json  transactions.py  utils.py  views.sql
psql/: bc_monitor.py  dblib.py  initializeproject.py  project_monitor.py  results.csv  test.py
