[tool.poetry]
name = "getfair"
version = "0.1.0"
description = "Getfair ETL and transaction submission in Cardano Blockchain"
authors = ["Moxie"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cerberus = "^1.3.4"
psycopg2 = "^2.9.5"
requests = "^2.28.2"
python-decouple = "^3.8"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
